# Amharic-Tokenizer

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  amh_bpe_v0.1.2.json  pyproject.toml  requirements..txt  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: pylint.yml
amharic_tokenizer/: __init__.py  amh_bpe_v0.2.1.json  amh_bpe_v0.2.5.json  cli.py  fidel_map.py  pipeline.py  tokenizer.py  tokenizer.pyx
data_crawler/: clean.py  crawl_translate.py
docs/: README.md
scripts/: configure_pypirc.py
tests/: test_basic.py
