[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["build", "dist", ".tox"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[project]
name = "amharic-tokenizer"
version = "0.2.1"
description = "Amharic tokenizer with BPE-like merges over decomposed fidel (Cython)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [ { name = "Sefineh Tesfa", email = "sefinehtesfa34@gmail.com" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Cython",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sefineh-ai/AMH-Tokenizer"
Issues = "https://github.com/sefineh-ai/AMH-Tokenizer/issues"

[project.scripts]
amh-tokenizer = "amharic_tokenizer.cli:main"